[package]
name = "rust-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
gpui = { git = "https://github.com/zed-industries/zed" }
log = "0.4.27"
lyon = {version = "1.0", features = ["extra"]}
strum = "0.26.2"
strum_macros = "0.26.2"
unicode-segmentation = "1.12.0"
