[package]
name = "rust-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
log = "0.4.27"
lyon = {version = "1.0", features = ["extra"]}
unicode-segmentation = "1.12.0"

[build]
target = "aarch64-apple-darwin"